# CMGT-Engine-Vulkan

./: .gitignore  CMGTEngine.sln  CMakeLists.txt  CMakePresets.json  TODO.md  lights_matrix.md  rotate around math.txt  vcpkg.json
CMGTEngine/: CMGTEngine.vcxproj  CMGTEngine.vcxproj.filters  FirstGame.cpp  FirstGame.hpp  ObjectManager.hpp  main.cpp
CMGTEngine/Game/: FirstGame.cpp  FirstGame.hpp
CMGTEngine/core/: BasicShaderProgram.cpp  BasicShaderProgram.hpp  Camera.cpp  Camera.hpp  CameraMovement.cpp  CameraMovement.hpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  FreeMovement.cpp  FreeMovement.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  InputManager.cpp  InputManager.hpp  InstanceAPI.cpp  InstanceAPI.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ObjectManager.cpp  ObjectManager.hpp  ObjectMovement.cpp  ObjectMovement.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PlaneCollider.cpp  PlaneCollider.hpp  Scene.cpp  Scene.hpp  (+27 more)
CMGTEngine/shaders/: BasicFragmentShader.frag  BasicVertexShader.vert  frag.spv  vert.spv
Neni/: CMakeLists.txt  main.cpp
Neni/content/scripts/cpp/: LoveMaterial.cpp
Neni/content/scripts/header/: LoveMaterial.h
Neni/content/shaders/: BasicVertexShader.vert  LoveFragmentShader.frag  LoveVertexShader.vert
advanced_tools/: CMakeLists.txt  main.cpp
advanced_tools/content/shaders/: BasicFragmentShader.frag  GlobalShader.glsl
cmgt-engine/: CMakeLists.txt
cmgt-engine/core/: CMakeLists.txt
cmgt-engine/core/cpp/: BasicShaderProgram.cpp  Camera.cpp  Component.cpp  Game.cpp  GameObject.cpp  Globals.cpp  GraphicsPipeline.cpp  Input.cpp  InputManager.cpp  Light.cpp  Material.cpp  Mesh.cpp  Object.cpp  ObjectManager.cpp  Scene.cpp  SceneManager.cpp  ShaderProgram.cpp  Texture.cpp  Transform.cpp  VulkanRenderer.cpp  Window.cpp  World.cpp  WorldSeed.cpp
cmgt-engine/core/header/core/: BasicShaderProgram.h  Camera.h  Component.h  Game.h  GameObject.h  Globals.h  GraphicsPipeline.h  Input.h  InputManager.h  Light.h  Material.h  Mesh.h  Object.h  ObjectManager.h  Scene.h  SceneManager.h  ShaderProgram.h  Texture.h  Transform.h  VulkanRenderer.h  Window.h  World.h  WorldSeed.h  config.h
cmgt-engine/minimal/: CMakeLists.txt
cmgt-engine/minimal/header/minimal/: events.h  glm.h  log.h  paths.h  types.h
cmgt-engine/physics-engine/: CMakeLists.txt
cmgt-engine/physics-engine/cpp/: BoxCollider.cpp  CapsuleCollider.cpp  Collider.cpp  MeshCollider.cpp  PhysicsBody.cpp  PhysicsEngine.cpp  PlaneCollider.cpp  Shape.cpp  SphereCollider.cpp
cmgt-engine/physics-engine/header/physics-engine/: BoxCollider.h  CapsuleCollider.h  Collider.h  MeshCollider.h  PhysicsBody.h  PhysicsEngine.h  PlaneCollider.h  Shape.h  SphereCollider.h
cmgt-engine/render-engine/: CMakeLists.txt
cmgt-engine/render-engine/cpp/: VulkanBuffer.cpp  VulkanDescriptor.cpp  VulkanInstance.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp
cmgt-engine/render-engine/header/render-engine/: VulkanBuffer.h  VulkanDescriptor.h  VulkanInstance.h  VulkanRenderer.h  VulkanSwapchain.h
cmgt-engine/utils/: CMakeLists.txt
cmgt-engine/utils/cpp/: BasicShaderProgram.cpp  Camera.cpp  CameraMovement.cpp  ColorMaterial.cpp  InputManager.cpp  Light.cpp  Mesh.cpp  MouseMovement.cpp  ObjectMovement.cpp  TestMaterial.cpp  TextureMaterial.cpp
cmgt-engine/utils/header/utils/: Camera.h  CameraMovement.h  ColorMaterial.h  InputManager.h  Light.h  Mesh.h  MouseMovement.h  ObjectMovement.h  TestMaterial.h  TextureMaterial.h
cmgt-engine/vulkan-api/: CMakeLists.txt
cmgt-engine/vulkan-api/cpp/: GLFW_Window.cpp  GraphicsPipeline.cpp  SDL_Window.cpp  ShaderProgram.cpp  VulkanBuffer.cpp  VulkanDescriptor.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanSwapchain.cpp  VulkanUniformObject.cpp  Window.cpp
cmgt-engine/vulkan-api/header/vulkan-api/: GLFW_Window.h  GraphicsPipeline.h  SDL_Window.h  ShaderProgram.h  VulkanBuffer.h  VulkanDescriptor.h  VulkanFrameData.h  VulkanImage.h  VulkanInstance.h  VulkanSwapchain.h  VulkanUniformObject.h  Window.h
main/: CMakeLists.txt  main.cpp
main/content/shaders/: BasicFragmentShader.frag  BasicVertexShader.vert  ColorShader.frag  ColorShader.vert  GlobalShader.glsl
main/cpp/: FirstGame.cpp
main/header/main/: FirstGame.h
shaders/: compile_shaders.bat  frag.spv
test/: CMakeLists.txt  test.cpp
test/cpp/: event_test.cpp  texture_test.cpp
test/header/test/: event_test.h
